--- a/asayer-nunit/App.config
+++ b/asayer-nunit/App.config
@@ -4,12 +4,11 @@
     <section name="capabilities" type="System.Configuration.AppSettingsSection" />
   </configSections>
   <appSettings>
-    <add key="apikey" value="ASAYER API KEY" />    
+    <add key="apikey" value="ASAYER API KEY" />
     <add key="server" value="http://hub.asayer.io/wd/hub" />
-    <add key="name" value="Testing NUnit Asayer.io" />
+    <add key="name" value="Testing NUnit with Asayer" />
   </appSettings>
   <capabilities>
-    <add key="resolution" value="1280x600" />
     <add key="platform" value="LINUX" />
     <add key="browserName" value="chrome" />
   </capabilities>
