--- a/asayer-nunit/App.config
+++ b/asayer-nunit/App.config
@@ -5,7 +5,7 @@
   </configSections>
   <appSettings>
     <add key="apikey" value="ASAYER API KEY" />
-    <add key="server" value="http://hub.asayer.io/wd/hub" />
+    <add key="server" value="https://hub.asayer.io/wd/hub" />
     <add key="name" value="Testing NUnit with Asayer" />
   </appSettings>
   <capabilities>
