flags + some changes

--- a/asayer-nunit/App.config
+++ b/asayer-nunit/App.config
@@ -1,15 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <section name="capabilities" type="System.Configuration.AppSettingsSection" />
+  <configSections>   
+    <sectionGroup name="capabilities">
+      <section name="settings" type="System.Configuration.NameValueSectionHandler" />
+      <section name="flags" type="System.Configuration.NameValueSectionHandler" />
+    </sectionGroup>
   </configSections>
   <appSettings>
     <add key="apikey" value="ASAYER API KEY" />
     <add key="server" value="https://hub.asayer.io/wd/hub" />
     <add key="name" value="Testing NUnit with Asayer" />
+
+    <add key="tunnelId" value="" />
   </appSettings>
   <capabilities>
-    <add key="platform" value="LINUX" />
-    <add key="browserName" value="chrome" />
+    <settings>
+      <add key="platform" value="LINUX" />
+      <add key="browserName" value="chrome" />
+    </settings>
+    <flags>
+      <add key="--incognito" value="true" />
+      <add key="--start-fullscreen" value="true"/>
+    </flags>
   </capabilities>
 </configuration>
