--- a/asayer-nunit/App.config
+++ b/asayer-nunit/App.config
@@ -15,7 +15,7 @@
   </appSettings>
   <capabilities>
     <settings>
-      <add key="platform" value="LINUX" />
+      <add key="platform" value="any" />
       <add key="browserName" value="chrome" />
     </settings>
     <flags>
